@@ -18,7 +18,11 @@
 
 /*****
 TO DO:
+Check that default sep for first column date test is now space not \\. Then implement loop to find separator to find header row.
 Test Garrett's two files again.
+akhilsbehl's integer64 example.
+Add LaF comparison.
+as.read.table=TRUE/FALSE option.  Or fread.table and fread.csv (see thread on datatable-help).
 print.data.table nrow tidy up. Change test() to be print(DT,topn=2)
 Warn about non whitespace (unprotected by comment.char) after the last column on any line (currently skipped silently)
 Warning about any blank lines skipped in the middle, and any imperfect number of columns
@@ -29,7 +33,7 @@ Allow logical columns (currently read as character). T/True/TRUE/true are allowe
 ---
 Add a way to pick out particular columns only, by name or position.
 A way for user to override type, for particular columns only.
-Detect and coerce dates and times. By searching for - and :, and dateTtime etc, or R's own method.
+Detect and coerce dates and times. By searching for - and :, and dateTtime etc, or R's own method. POSIXct default, for microseconds? : http://stackoverflow.com/questions/14056370/cast-string-to-idatetime
 CoerceVector should only coerce items read so far.
 Read middle and end to check types
 A few TO DO inline in the code, including some speed fine tuning
@@ -227,7 +231,7 @@ SEXP readfile(SEXP input, SEXP separg, SEXP nrowsarg, SEXP headerarg, SEXP nastr
     if (isNull(separg)) {
         while (ch<eof && isspace(*ch) && *ch!=eol) ch++;             // skip over any leading space at start of row
         if (ch<eof && *ch=='\"') {while(++ch<eof && *ch!='\"' && *ch!=eol); ch++;} // if first column is protected skip over it, and the closing "
-        while (ch<eof && (isalnum(*ch) || *ch=='\"' || *ch=='.' || *ch=='+' || *ch=='-')) ch++;
+        while (ch<eof && (isalnum(*ch) || *ch=='\"' || *ch=='.' || *ch=='+' || *ch=='-' || *ch=='\\' || *ch=='/')) ch++;
         if (ch==eof) sep=eol; else sep=*ch;
         if (verbose) {
             if (sep==eol) Rprintf("Line %d ends before any separator was found. Deducing this is a single column input. Otherwise, please specify 'sep' manually, see ?fread.\n", nline);
